--- a/src/containers/Body/Body.css
+++ b/src/containers/Body/Body.css
@@ -1,24 +1,30 @@
-.main-body {
+/*.main-body {
+
+  position:relative;
   width: 100%;
-  display: block;
-  background: center url('../../images/bar.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
   min-height: 100vh;
-  height: 100%;
-}
-.main-body::before {
+  height:100%;
+  background-color:;
+}*/
+
+.main-body::after {
+  filter: blur(3px);
+  opacity: 0.3;
+  z-index: -1;
+  position: fixed;
   content: '';
-  opacity: 0.4;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  position:fixed;
+  width: 100%;
+  display: block;
+  background: center url('../../images/bar.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
-  height:100%;
-  background-color: #261b16;
+  height: 100%;
 }
 
 .map-div {
